{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 28,
  "lineage": "e2ebbaad-64cb-ff46-951a-6f3c306637a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionhost",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0246158ff25a09fc7",
            "arn": "arn:aws:ec2:us-west-2:535819069727:instance/i-0177b84a57cbd4a24",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0177b84a57cbd4a24",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9aa64f413535ed8",
            "private_dns": "ip-10-0-101-210.us-west-2.compute.internal",
            "private_ip": "10.0.101.210",
            "public_ip": "54.214.60.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0970e0540b20bdeea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c98720a54372306f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068f52ac5d6963f06",
            "tags": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c98720a54372306f"
            ]
          },
          "dependencies": [
            "aws_security_group.bastionhostsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:535819069727:loadbalancer/net/jenkins-master/bfdf1950b9efc8a8",
            "arn_suffix": "net/jenkins-master/bfdf1950b9efc8a8",
            "dns_name": "jenkins-master-bfdf1950b9efc8a8.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:535819069727:loadbalancer/net/jenkins-master/bfdf1950b9efc8a8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "jenkins-master",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ae28f7188b84169"
              },
              {
                "subnet_id": "subnet-00bac09c0bffd3f16"
              },
              {
                "subnet_id": "subnet-068f52ac5d6963f06"
              }
            ],
            "subnets": [
              "subnet-00ae28f7188b84169",
              "subnet-00bac09c0bffd3f16",
              "subnet-068f52ac5d6963f06"
            ],
            "tags": {
              "Application": "Jenkins",
              "Name": "jenkins-master",
              "Owner": "DevOps Platform"
            },
            "vpc_id": "vpc-0ae1ed879ac9a2cdc",
            "zone_id": "Z18D5FSROUN65G"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:535819069727:listener/net/jenkins-master/bfdf1950b9efc8a8/9ac086f76175a17a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:535819069727:targetgroup/jm20200117203751225600000001/fa8d342c7f9c27a2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:535819069727:listener/net/jenkins-master/bfdf1950b9efc8a8/9ac086f76175a17a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:535819069727:loadbalancer/net/jenkins-master/bfdf1950b9efc8a8",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.master",
            "aws_lb_target_group.master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:535819069727:targetgroup/jm20200117203751225600000001/fa8d342c7f9c27a2",
            "arn_suffix": "targetgroup/jm20200117203751225600000001/fa8d342c7f9c27a2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:535819069727:targetgroup/jm20200117203751225600000001/fa8d342c7f9c27a2",
            "lambda_multi_value_headers_enabled": false,
            "name": "jm20200117203751225600000001",
            "name_prefix": "jm",
            "port": 8080,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-0ae1ed879ac9a2cdc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionhostsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535819069727:security-group/sg-0c98720a54372306f",
            "description": "Security Group fo rbastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c98720a54372306f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastionhostsg",
            "name_prefix": null,
            "owner_id": "535819069727",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ae1ed879ac9a2cdc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535819069727:security-group/sg-00d5671df8eee3699",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d5671df8eee3699",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-master",
            "name_prefix": null,
            "owner_id": "535819069727",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae1ed879ac9a2cdc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master-efs-storage",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535819069727:security-group/sg-0a9be483a1b9f1e8b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9be483a1b9f1e8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-master-efs-storage",
            "name_prefix": null,
            "owner_id": "535819069727",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae1ed879ac9a2cdc"
          }
        }
      ]
    }
  ]
}